Bug 107626 - [SNB] The graphical corruption and GPU hang occur sometimes on the piglit test "arb_texture_multisample-large-float-texture" with parameter --fp16
Summary: [SNB] The graphical corruption and GPU hang occur sometimes on the piglit tes...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 18.2
Hardware: Other All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-20 14:28 UTC by asimiklit
Modified: 2018-11-09 08:46 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
The graphical corruption example 1 (4.32 MB, image/jpeg)
2018-08-20 14:28 UTC, asimiklit
Details
log with options INTEL_DEBUG=bat,buf (248.85 KB, text/plain)
2018-08-20 15:19 UTC, asimiklit
Details

Description asimiklit 2018-08-20 14:28:15 UTC
Created attachment 141199 [details]
The graphical corruption example 1

The root cause of the bug is found and solution will be shortly.
Comment 1 asimiklit 2018-08-20 15:19:28 UTC
Created attachment 141200 [details]
log with options INTEL_DEBUG=bat,buf

Pay attention that the last batch of log has an aperture with negative value "(-1023.8Mb aperture)" and this last batch does not have STATE_BASE_ADDRESS command.

The solution is suggested:
https://patchwork.freedesktop.org/patch/245277/
Comment 2 asimiklit 2018-11-09 08:46:28 UTC
This issue was fixed by patch (2/2):
Commit: https://cgit.freedesktop.org/mesa/mesa/commit/?id=e4e0fd5ffe1de9078ac8906155e1a80ca2006994

The another patch 1/2 from this series was reverted due to regression:
Commit: https://cgit.freedesktop.org/mesa/mesa/commit/?id=5f312e95f8775e050ef9f8218be0eed6da1ee21d
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=108630

But anyway the patch 2/2, which was successfully accepted, fixed this bug.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.